# webimove-backend

./: .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yml  pyproject.toml
.github/workflows/: backend.yml
alembic/: env.py
api/core/db/: postgres.py
backend/: main.py
backend/api/core/conf/: db.py
backend/api/core/db/: postgres.py
backend/api/core/dependencies/: authjwt.py
tests/api/: test_empty.py
