[project]
name = "webimove-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.118.2",
    "pre-commit>=4.3.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
local = [
    "ruff>=0.14.0",
]
